--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Oracle Loan Tools. This service allows you to borrow iDNA to run oracle votes on the Idena Blockchain.">
     <script src="./resources/js/bundle.js"></script>
     <link rel="stylesheet" href="./resources/styles/index.css">
     <link rel="icon" href="./resources/favicon.ico">
