add noscript tag

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <title>Oracle Loan Tools</title>
 </head>
 <body>
+    <noscript>
+        <style>header, main{display: none;}</style>
+        <img src="./resources/logo.png" alt="Oracle Loan Tools" style="width: 90px; height: 90px;">
+        <p>I rely on javascript to function properly :(</p>
+        <p>You can check my source code <a href="https://github.com/Zen-44/oracle-loan-ui">here</a> if you have doubts.</p>
+    </noscript>
     <header>
         <img src="./resources/logo.png" alt="Oracle Loan Tools" style="width: 90px; height: 90px;">
         <div id="url">
