--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Smart contract address: [INSERT_SMART_CONTRACT_ADDRESS_HERE]
 To obtain a loan, you first need to propose an oracle, get it approved by someone in the review committee, and pay the oracle fee (5% of the owner deposit)
 
 For your oracle to be proposed successfully, it needs to:
-- have the smart contract address (the one above) as the refund address
+- have the smart contract address (the one above) as the refund address (owner address)
 - have no owner fee set
 - start within the next 2 weeks
 - have a maximum duration of approximately 4 weeks once started (120960 blocks)
