add details bar

--- a/index.html
+++ b/index.html
@@ -29,83 +29,88 @@
         </div>
     </header>
     <main>
-        <div id="inputs">
-            <div class="accordion">
-                <input type="checkbox" id="accordion-toggle-1" class="accordion-toggle">
-                <label for="accordion-toggle-1" class="accordion-title">Get balance</label>
-                <div id="accordion-content-get-balance" class="accordion-content">
-                    <span>Address</span>
-                    <input type="text" id="balance-input" placeholder="Enter your address">
-                    <button id="balance-button" onclick="module.getBalanceButton()">Get balance</button>
-                </div>
-            </div>
-            <div class="accordion">
-                <input type="checkbox" id="accordion-toggle-2" class="accordion-toggle">
-                <label for="accordion-toggle-2" class="accordion-title">Deposit</label>
-                <div id="accordion-content-deposit" class="accordion-content">
-                    <span>Amount</span>
-                    <input type="text" id="deposit-input" placeholder="Enter the amount">
-                    <button id="deposit-button" onclick="module.depositButton()">Deposit</button>
-                </div>
-            </div>
-            <div class="accordion">
-                <input type="checkbox" id="accordion-toggle-3" class="accordion-toggle">
-                <label for="accordion-toggle-3" class="accordion-title">Withdraw</label>
-                <div id="accordion-content-withdraw" class="accordion-content">
-                    <span>Amount</span>
-                    <input type="text" id="withdraw-input" placeholder="Enter the amount">
-                    <button id="withdraw-button" onclick="module.withdrawButton()">Withdraw</button>
-                </div>
-            </div>
-            <div class="accordion">
-                <input type="checkbox" id="accordion-toggle-4" class="accordion-toggle">
-                <label for="accordion-toggle-4" class="accordion-title">Propose oracle</label>
-                <div id="accordion-content-propose-oracle" class="accordion-content">
-                    <span>Address</span>
-                    <input type="text" id="propose-oracle-input" placeholder="Enter the oracle address">
-                    <button id="propose-oracle-button" onclick="module.proposeOracleButton()">Propose oracle</button>
-                </div>
-            </div>
-            <div class="accordion">
-                <input type="checkbox" id="accordion-toggle-5" class="accordion-toggle">
-                <label for="accordion-toggle-5" class="accordion-title">Pay oracle fee</label>
-                <div id="accordion-content-pay-oracle-fee" class="accordion-content">
-                    <span>Address</span>
-                    <input type="text" id="pay-oracle-fee-input" placeholder="Enter the oracle address">
-                    <button id="pay-oracle-fee-button" onclick="module.payOracleFeeButton()">Pay fee</button>
-                </div>
-            </div>
-            <div class="accordion">
-                <input type="checkbox" id="accordion-toggle-6" class="accordion-toggle">
-                <label for="accordion-toggle-6" class="accordion-title">Get oracle data</label>
-                <div id="accordion-content-get-oracle-data" class="accordion-content">
-                    <span>Address</span>
-                    <input type="text" id="get-oracle-data-input" placeholder="Enter the oracle address">
-                    <button id="get-oracle-data-button" onclick="module.getOracleDataButton()">Get data</button>
-                </div>
-            </div>
-            <div class="accordion">
-                <input type="checkbox" id="accordion-toggle-7" class="accordion-toggle">
-                <label for="accordion-toggle-7" class="accordion-title">Get review committee</label>
-                <div id="accordion-content-get-review-committee" class="accordion-content">
-                    <button id="approve-oracle-button" onclick="module.getReviewCommitteeButton()">Get review committee</button>
-                </div>
-            </div>
-            <div class="accordion">
-                <input type="checkbox" id="accordion-toggle-8" class="accordion-toggle">
-                <label for="accordion-toggle-8" class="accordion-title">Approve oracle</label>
-                <div id="accordion-content-approve-oracle" class="accordion-content">
-                    <span>Address</span>
-                    <input type="text" id="approve-oracle-input" placeholder="Enter the oracle address">
-                    <button id="approve-oracle-button" onclick="module.approveOracleButton()">Approve oracle</button>
-                </div>
-            </div>
+        <div id="contract-details-bar">
+            <span>Smart contract address: <a href="https://scan.idena.io/contract/[SMART_CONTRACT_ADDRESS]" target="_blank">[SMART_CONTRACT_ADDRESS]</a></span>
+            <span> Smart contract balance: [SMART_CONTRACT_BALANCE] iDNA</span>
         </div>
-        <div id="output">
-            <textarea type="text" id="output-console" readonly>=== Welcome to the Oracle Loan dApp ===
+        <div id="tools">
+            <div id="inputs">
+                <div class="accordion">
+                    <input type="checkbox" id="accordion-toggle-1" class="accordion-toggle">
+                    <label for="accordion-toggle-1" class="accordion-title">Get balance</label>
+                    <div id="accordion-content-get-balance" class="accordion-content">
+                        <span>Address</span>
+                        <input type="text" id="balance-input" placeholder="Enter your address">
+                        <button id="balance-button" onclick="module.getBalanceButton()">Get balance</button>
+                    </div>
+                </div>
+                <div class="accordion">
+                    <input type="checkbox" id="accordion-toggle-2" class="accordion-toggle">
+                    <label for="accordion-toggle-2" class="accordion-title">Deposit</label>
+                    <div id="accordion-content-deposit" class="accordion-content">
+                        <span>Amount</span>
+                        <input type="text" id="deposit-input" placeholder="Enter the amount">
+                        <button id="deposit-button" onclick="module.depositButton()">Deposit</button>
+                    </div>
+                </div>
+                <div class="accordion">
+                    <input type="checkbox" id="accordion-toggle-3" class="accordion-toggle">
+                    <label for="accordion-toggle-3" class="accordion-title">Withdraw</label>
+                    <div id="accordion-content-withdraw" class="accordion-content">
+                        <span>Amount</span>
+                        <input type="text" id="withdraw-input" placeholder="Enter the amount">
+                        <button id="withdraw-button" onclick="module.withdrawButton()">Withdraw</button>
+                    </div>
+                </div>
+                <div class="accordion">
+                    <input type="checkbox" id="accordion-toggle-4" class="accordion-toggle">
+                    <label for="accordion-toggle-4" class="accordion-title">Propose oracle</label>
+                    <div id="accordion-content-propose-oracle" class="accordion-content">
+                        <span>Address</span>
+                        <input type="text" id="propose-oracle-input" placeholder="Enter the oracle address">
+                        <button id="propose-oracle-button" onclick="module.proposeOracleButton()">Propose oracle</button>
+                    </div>
+                </div>
+                <div class="accordion">
+                    <input type="checkbox" id="accordion-toggle-5" class="accordion-toggle">
+                    <label for="accordion-toggle-5" class="accordion-title">Pay oracle fee</label>
+                    <div id="accordion-content-pay-oracle-fee" class="accordion-content">
+                        <span>Address</span>
+                        <input type="text" id="pay-oracle-fee-input" placeholder="Enter the oracle address">
+                        <button id="pay-oracle-fee-button" onclick="module.payOracleFeeButton()">Pay fee</button>
+                    </div>
+                </div>
+                <div class="accordion">
+                    <input type="checkbox" id="accordion-toggle-6" class="accordion-toggle">
+                    <label for="accordion-toggle-6" class="accordion-title">Get oracle data</label>
+                    <div id="accordion-content-get-oracle-data" class="accordion-content">
+                        <span>Address</span>
+                        <input type="text" id="get-oracle-data-input" placeholder="Enter the oracle address">
+                        <button id="get-oracle-data-button" onclick="module.getOracleDataButton()">Get data</button>
+                    </div>
+                </div>
+                <div class="accordion">
+                    <input type="checkbox" id="accordion-toggle-7" class="accordion-toggle">
+                    <label for="accordion-toggle-7" class="accordion-title">Get review committee</label>
+                    <div id="accordion-content-get-review-committee" class="accordion-content">
+                        <button id="approve-oracle-button" onclick="module.getReviewCommitteeButton()">Get review committee</button>
+                    </div>
+                </div>
+                <div class="accordion">
+                    <input type="checkbox" id="accordion-toggle-8" class="accordion-toggle">
+                    <label for="accordion-toggle-8" class="accordion-title">Approve oracle</label>
+                    <div id="accordion-content-approve-oracle" class="accordion-content">
+                        <span>Address</span>
+                        <input type="text" id="approve-oracle-input" placeholder="Enter the oracle address">
+                        <button id="approve-oracle-button" onclick="module.approveOracleButton()">Approve oracle</button>
+                    </div>
+                </div>
+            </div>
+            <div id="output">
+                <textarea type="text" id="output-console" readonly>=== Welcome to the Oracle Loan dApp ===
 This site allows you to interact with the Oracle Loan smart contract
 
-Smart contract address: [INSERT_SMART_CONTRACT_ADDRESS_HERE]
+Smart contract address: [SMART_CONTRACT_ADDRESS]
 
 To obtain a loan, you first need to propose an oracle, get it approved by someone in the review committee, and pay the oracle fee (5% of the owner deposit)
 
@@ -118,8 +123,9 @@ For your oracle to be proposed successfully, it needs to:
 To get your oracle approved, you can ask a member of the review committee to approve it on the official Idena discord server (https://discord.gg/idena-community-634481767352369162)
 
 After you pay the fee, your oracle will receive the deposit necessary to start it (you still need to launch it manually)
-            </textarea>
-            <button id="clear-button" onclick="module.clearConsole()">Clear</button>
+                </textarea>
+                <button id="clear-button" onclick="module.clearConsole()">Clear</button>
+            </div>
         </div>
     </main>
 </body>
