add #oracle-loan discord channel

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ For your oracle to be proposed successfully, it needs to:
 - start within the next 2 weeks
 - have a maximum duration of approximately 4 weeks once started (120960 blocks)
 
-To get your oracle approved, you can ask a member of the review committee to approve it on the official Idena discord server (https://discord.gg/idena-community-634481767352369162)
+To get your oracle approved, you can ask a member of the review committee to approve it on the official Idena discord server (https://discord.gg/idena-community-634481767352369162) channel #oracle-loan
 
 After you pay the fee, your oracle will receive the deposit necessary to start it (you still need to launch it manually)
                 </textarea>
