add contact information

--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@ For your oracle to be proposed successfully, it needs to:
 To get your oracle approved, you can ask a member of the review committee to approve it on the official Idena discord server (https://discord.gg/idena-community-634481767352369162) channel #oracle-loan
 
 After you pay the fee, your oracle will receive the deposit necessary to start it (you still need to launch it manually)
+
+If you need help or have questions you may contact me on:
+- Discord: zen_._
+- Telegram: @ZenMaster44
                 </textarea>
                 <button id="clear-button" onclick="module.clearConsole()">Clear</button>
             </div>
