--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Oracle Loan Tools</title>
     <meta name="description" content="Oracle Loan Tools. This service allows you to borrow iDNA to run oracle votes on the Idena Blockchain.">
+
+    <!-- OGP Tags -->
+    <meta data-rh="true" property="og:type" content="website">
+    <meta data-rh="true" property="og:title" content="Oracle Loan Tools">
+    <meta data-rh="true" property="og:description" content="Oracle Loan Tools. This service allows you to borrow iDNA to run oracle votes on the Idena Blockchain.">
+    <meta data-rh="true" property="og:url" content="https://oracle-loan.idena.cloud">
+    <meta data-rh="true" property="og:image" content="https://oracle-loan.idena.cloud/resources/logo.png">
+    
     <script src="./resources/js/bundle.js"></script>
     <link rel="stylesheet" href="./resources/styles/index.css">
     <link rel="icon" href="./resources/favicon.ico">
-    <title>Oracle Loan Tools</title>
 </head>
 <body>
     <noscript>
