add clarification to the fee rate

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ This site allows you to interact with the Oracle Loan smart contract
 
 Smart contract address: [SMART_CONTRACT_ADDRESS]
 
-To obtain a loan, you first need to propose an oracle, get it approved by someone in the review committee, and pay the oracle fee
+To obtain a loan, you first need to propose an oracle, get it approved by someone in the review committee, and pay the oracle fee (according to the fee rate and the amount borrowed)
 
 For your oracle to be proposed successfully, it needs to:
 - have the smart contract address (the one above) as the refund address (owner address)
