add different success messages

--- a/success.html
+++ b/success.html
@@ -13,15 +13,22 @@
     <meta data-rh="true" property="og:url" content="https://oracle-loan.idena.cloud">
     <meta data-rh="true" property="og:image" content="https://oracle-loan.idena.cloud/resources/logo.png">
 
+    <script src="./resources/js/success.js"></script>
     <link rel="stylesheet" href="./resources/styles/success.css">
     <link rel="icon" href="./resources/favicon.ico">
 </head>
 <body>
-    <h1>Transaction Submitted</h1>
-    <div class="content">
-        <h3>Now that your oracle was proposed, you need to obtain approval for your loan.</h3>
-        <h3>To do this, head to our <a href="https://discord.gg/idena-community-634481767352369162">discord server</a>, channel <a href="https://discord.com/channels/634481767352369162/1273921357918240801">#oracle-loan</a>.</h3>
-        <h3>Or if you don't like discord, contact <a href="https://t.me/ZenMaster44">@ZenMaster44</a> on Telegram.</h3>
-    </div>
+    <noscript>
+        <style>header, main{display: none;}</style>
+        <img src="./resources/logo.png" alt="Oracle Loan Tools" style="width: 90px; height: 90px;">
+        <p>I rely on javascript to function properly :(</p>
+        <p>You can check my source code <a href="https://github.com/Zen-44/oracle-loan-ui">here</a> if you have doubts.</p>
+    </noscript>
+    <main>
+        <h1>Transaction Submitted</h1>
+        <div id="content">
+            
+        </div>
+    </main>
 </body>
 </html>
