--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
                     Smart contract address: [SMART_CONTRACT_ADDRESS]
 
                     To obtain a loan, you need to:
-                    - create an oracle (check this guide to make sure you set the correct parameters: <a href="./guide.html" target="_blank">https://oracle-loan.idena.cloud/guide.html</a>)
-                    - propose the oracle using the tools on the left
-                    - obtain approval for your loan (you will be prompted to the discord server after proposing the oracle)
-                    - pay the oracle fee using the tools on the left
-                    - start your oracle from the Idena Client
+                    1. create an oracle (check this guide to make sure you set the correct parameters: <a href="./guide.html" target="_blank">https://oracle-loan.idena.cloud/guide.html</a>)
+                    2. propose the oracle using the tools on the left
+                    3. obtain approval for your loan (you will be prompted to the discord server after proposing the oracle)
+                    4. pay the oracle fee using the tools on the left
+                    5. start your oracle from the Idena Client
 
                     If you need help or have questions you may contact me on:
                     - Discord: zen_._
