underline the guide for visibility

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     Smart contract address: [SMART_CONTRACT_ADDRESS]
 
                     To obtain a loan, you need to:
-                    1. create an oracle (check this guide to make sure you set the correct parameters: <a href="./guide.html" target="_blank">https://oracle-loan.idena.cloud/guide.html</a>)
+                    1. create an oracle (<u>check this guide to make sure you set the correct parameters: <a href="./guide.html" target="_blank">https://oracle-loan.idena.cloud/guide</a></u>)
                     2. propose the oracle using the tools on the left
                     3. obtain approval for your loan (you will be prompted to the discord server after proposing the oracle)
                     4. pay the oracle fee using the tools on the left
