make the guide and anchors more visible

--- a/index.html
+++ b/index.html
@@ -37,10 +37,13 @@
         </div>
     </header>
     <main>
-        <div id="contract-details-bar">
+        <div id="contract-details-bar" class="info-bar">
             <span>Smart contract address: <a href="https://scan.idena.io/contract/[SMART_CONTRACT_ADDRESS]" target="_blank">[SMART_CONTRACT_ADDRESS]</a></span>
             <span>Smart contract balance: [SMART_CONTRACT_BALANCE] iDNA</span>
             <span>Fee rate: [FEE_RATE]%</span>
+        </div>
+        <div class="info-bar">
+            <span>Check the <a href="./guide.html" target="_blank">Oracle Creation Guide</a></span>
         </div>
         <div id="tools">
             <div id="inputs">
@@ -122,7 +125,7 @@
                     Smart contract address: [SMART_CONTRACT_ADDRESS]
 
                     To obtain a loan, you need to:
-                    1. create an oracle (<u>check this guide to make sure you set the correct parameters: <a href="./guide.html" target="_blank">https://oracle-loan.idena.cloud/guide</a></u>)
+                    1. create an oracle (check this guide to make sure you set the correct parameters: <a href="./guide.html" target="_blank">https://oracle-loan.idena.cloud/guide</a>)
                     2. propose the oracle using the tools on the left
                     3. obtain approval for your loan (you will be prompted to the discord server after proposing the oracle)
                     4. pay the oracle fee using the tools on the left
