make the second info bar text bold

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <span>Fee rate: [FEE_RATE]%</span>
         </div>
         <div class="info-bar">
-            <span>Check the <a href="./guide.html" target="_blank">Oracle Creation Guide</a></span>
+            <span><strong>Check the <a href="./guide.html" target="_blank">Oracle Creation Guide</a></strong></span>
         </div>
         <div id="tools">
             <div id="inputs">
