--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     <main>
         <div id="contract-details-bar" class="info-bar">
             <span>Smart contract address: <a href="https://scan.idena.io/contract/[SMART_CONTRACT_ADDRESS]" target="_blank">[SMART_CONTRACT_ADDRESS]</a></span>
-            <span>Smart contract balance: [SMART_CONTRACT_BALANCE] iDNA</span>
+            <span>Current smart contract balance: [SMART_CONTRACT_BALANCE] iDNA</span>
+            <span>Total funds: [SMART_CONTRACT_FUND_POOL] iDNA</span>
             <span>Fee rate: [FEE_RATE]%</span>
         </div>
         <div class="info-bar">
